--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   <span class="tree">Link Tree</span>
   <div class="container">
     <nav>
-      <img src="/Images/profile.jpg" class="profile"alt="profile" />
+      <img src="Images/profile.jpg" class="profile"alt="profile" />
       <p style="margin-left: 20px;
       font-weight: 600;">Radha Krishna</p>
-      <img src="/Images/github.png" class="profile"alt="profile" style="opacity: 0;"/>
+      <img src="Images/github.png" class="profile"alt="profile" style="opacity: 0;"/>
     </nav>
     <div>
       <div class="linkcontainer">
@@ -34,6 +34,6 @@
   </div>
   
   <!-- Project -->
-  <script src="/main.js" type="module"></script>
+  <script src="main.js" type="module"></script>
 </body>
 </html>
