Remove type='module' from main.js script tag

--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
   </div>
   
   <!-- Project -->
-  <script src="main.js" type="module"></script>
+  <script src="main.js"></script>
 </body>
 </html>
